# scada-with-rust-backend

./: API.md  Cargo.toml  DOCUMENTATION.md  IMPLEMENTATION.md  README.md  database.db  run-dev.sh  test-api.http
src/: auth.rs  database.rs  handlers.rs  main.rs  models.rs
